<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first2"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/citi_card_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textview_first3"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <TextView
        android:id="@+id/textview_first6"
        android:layout_width="105dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/capitalone_savorone_card_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first5" />

    <TextView
        android:id="@+id/textview_first10"
        android:layout_width="105dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/venmo_card_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first9" />

    <TextView
        android:id="@+id/textview_first8"
        android:layout_width="105dp"
        android:layout_height="95dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/discover_card_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first7" />

    <TextView
        android:id="@+id/textview_first3"
        android:layout_width="137dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/capitalone_card_body"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first4" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/citi_card_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.191"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first5"
        android:layout_width="121dp"
        android:layout_height="90dp"
        android:layout_marginTop="176dp"
        android:text="@string/capitalone_savorone_card_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first9"
        android:layout_width="121dp"
        android:layout_height="90dp"
        android:layout_marginTop="400dp"
        android:text="@string/venmo_card_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first7"
        android:layout_width="121dp"
        android:layout_height="90dp"
        android:layout_marginTop="176dp"
        android:text="@string/discover_card_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.706"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_first4"
        android:layout_width="148dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/capitalone_card_title"
        android:textColor="@android:color/darker_gray"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>